Add Function to Images
